# Ultra-Light-Fast-Generic-Face-Detector-1MB

./: CMakeLists.txt  README.md  README_EN.md  README_FORK.md  README_JP.md  install.sh  package.xml  train_mb_tiny_RFB_fd.sh  train_mb_tiny_fd.sh
config/: ulfg_with_tf.rviz
doc/: README.md
launch/: camera.launch  face_detect.launch  face_detect_with_tf.launch
models/: readme
models/pretrained/: Mb_Tiny_RFB_FD_train_input_1280.pth
msg/: BoundingBox.msg  BoundingBoxesStamp.msg
src/: detect_imgs.py  face_detect_ros.py  person_recognition.py  run_video_face_detect.py  tf_broadcaster.cpp  train.py
